--- a/app/templates/products/new.html
+++ b/app/templates/products/new.html
@@ -10,7 +10,7 @@
     <input name="sku" id="sku" type="text" placeholder="Ex.: AB1234567" value="" maxlength="25" required />
     <label for="name">Name*</label>
     <input name="name" id="name" type="text" placeholder="Ex.: John Doe" value="" maxlength="200" required />
-    <label for="description">Description*</label>
+    <label for="description">Description</label>
     <textarea name="description" id="description" placeholder="Short product description." rows="4"></textarea>
     <label for="price">Price*</label>
     <input name="price" id="price" type="number" min="0" max="9999999999.99" step="0.01" placeholder="0.00" value="" required/>
