--- a/app/templates/products/edit.html
+++ b/app/templates/products/edit.html
@@ -8,15 +8,17 @@
   <input name="sku" id="sku" type="text" value="{{ product['sku'] }}" disabled />
   <label for="name">Name</label>
   <input name="name" id="name" type="text" value="{{ product['name'] }}" disabled />
-  <label for="description">Description*</label>
+  <label class="required" for="description">Description</label>
   <textarea name="description" id="description" rows="4" required>{{ product['description'] }}</textarea>
-  <label for="price">Price*</label>
+  <label class="required" for="price">Price</label>
   <input name="price" id="price" type="number" value="{{ product['price'] }}" min="0" max="9999999999.99" step="0.01" placeholder="0.00" value="" required/>
   
   {% if product['ean'] is not none %}
   <label for="ean">EAN</label>
   <input name="ean" id="ean" type="text" value="{{ product['ean'] }}" disabled/>
   {% endif %}
+
+  <label class="required-description">Required fields</label>
 
   <div class="button_holder">
     <input type="submit" class="confirm" value="Confirm Edit"/>
