--- a/app/templates/products/new.html
+++ b/app/templates/products/new.html
@@ -6,16 +6,17 @@
 {% endblock%}
 {% block content %}
   <form method="post">
-    <label for="sku">SKU*</label>
+    <label class="required" for="sku">SKU</label>
     <input name="sku" id="sku" type="text" placeholder="Ex.: AB1234567" value="" maxlength="25" required />
-    <label for="name">Name*</label>
+    <label class="required" for="name">Name</label>
     <input name="name" id="name" type="text" placeholder="Ex.: John Doe" value="" maxlength="200" required />
     <label for="description">Description</label>
     <textarea name="description" id="description" placeholder="Short product description." rows="4"></textarea>
-    <label for="price">Price*</label>
+    <label class="required" for="price">Price</label>
     <input name="price" id="price" type="number" min="0" max="9999999999.99" step="0.01" placeholder="0.00" value="" required/>
     <label for="ean">EAN</label>
     <input name="ean" id="ean" type="text" placeholder="Ex.: 123456789089" value="" pattern="[0-9]{13}" maxlength="13"/>
+    <label class="required-description">Required fields</label>    
     <div class="button_holder">
       <input type="submit" class="confirm" value="Create"/>
     </div>
