--- a/app/templates/customers/new.html
+++ b/app/templates/customers/new.html
@@ -7,14 +7,15 @@
 {% endblock %}
 {% block content %}
   <form method="post">
-    <label for="name">Name*</label>
+    <label class="required" for="name">Name</label>
     <input name="name" id="name" type="text" placeholder="Ex.: John Doe" value="" maxlength="80" required />
-    <label for="email">Email*</label>
+    <label class="required" for="email">Email</label>
     <input name="email" id="email" type="text" placeholder="Ex.: johndoe@mail.com" value="" maxlength="254" required />
     <label for="phone">Phone Number</label>
     <input name="phone" id="phone" type="text" placeholder="Ex.: 912345678" value="" maxlength="15" />
     <label for="address">Address</label>
     <input name="address" id="address" type="text" placeholder="Ex.: John Doe Street, 1234-567 City" value="" maxlength="255" />
+    <label class="required-description">Required fields</label>
     <div class="button_holder">
       <input type="submit" class="confirm" value="Create"/>
     </div>
