--- a/app/templates/paged.html
+++ b/app/templates/paged.html
@@ -16,20 +16,20 @@
   <div style="text-align:center">
     <div class="pagination">
       {% if p > 2 %}
-        <a href="{{ url_for('products_index', p=1)}}">1</a>
+        <a href="{{ url_for(page+'_index', p=1)}}">1</a>
         <a class="etc">...</a>  
       {% endif%}
       {% if p > 1 %}
-        <a href="{{ url_for('products_index', p=p-1)}}">{{p-1}}</a>
+        <a href="{{ url_for(page+'_index', p=p-1)}}">{{p-1}}</a>
       {%endif%}
         <b>
         <a class="active">{{p}}</a>
         </b>
       {% if p < last_p %}
-        <a href="{{ url_for('products_index', p=p+1)}}">{{p+1}}</a>
+        <a href="{{ url_for(page+'_index', p=p+1)}}">{{p+1}}</a>
       {% endif %}{% if p < last_p-1 %}
         <a class="etc">...</a>  
-        <a href="{{ url_for('products_index', p=last_p)}}">{{last_p}}</a>
+        <a href="{{ url_for(page+'_index', p=last_p)}}">{{last_p}}</a>
       {% endif %}
     </div>
   </div>
