--- a/app/templates/customers/new.html
+++ b/app/templates/customers/new.html
@@ -10,9 +10,9 @@
     <label class="required" for="name">Name</label>
     <input name="name" id="name" type="text" placeholder="Ex.: John Doe" value="" maxlength="80" required />
     <label class="required" for="email">Email</label>
-    <input name="email" id="email" type="email" pattern="^[a-z0-9][a-z.\-0-9]*@[a-z][a-z.]*[a-z]\.[a-z]{2,3}$" placeholder="Ex.: johndoe@mail.com" value="" maxlength="254" required />
+    <input name="email" id="email" type="email" pattern="^[a-z0-9][a-z.\-0-9]*@[a-z][a-z.]*[a-z]\.[a-z]{2,3}$" title="Invalid Email" placeholder="Ex.: johndoe@mail.com" value="" maxlength="254" required />
     <label for="phone">Phone Number</label>
-    <input name="phone" id="phone" type="text" pattern="^[0-9]{9}$" placeholder="Ex.: 912345678" value="" maxlength="9" />
+    <input name="phone" id="phone" type="text" pattern="^[0-9]{9}$" title="Exactly 9 digits" placeholder="Ex.: 912345678" value="" maxlength="9" />
     <label for="address">Address</label>
     <input name="address" id="address" type="text" placeholder="Ex.: John Doe Street, 1234-567 City" value="" maxlength="255" />
     <label class="required-description">Required fields</label>
