--- a/app/static/style.css
+++ b/app/static/style.css
@@ -143,7 +143,12 @@ nav ul li a.active {
   flex: auto;
 }
 
-.post > header > div {
+.post > header > div > div {
+  word-wrap: break-word;
+  max-width: 700px;
+}
+
+.post > header > div > h1 {
   word-wrap: break-word;
   max-width: 700px;
 }
