--- a/app/templates/orders/index.html
+++ b/app/templates/orders/index.html
@@ -43,12 +43,16 @@
       {% endif %}
     </header>
 
+    {% if products[order['order_no']]|length %}
     <p class="body"><b>Products:</b></p>
     <ul>
     {% for product in products[order['order_no']] %}
     <li>{{ product['qty'] }} x [{{ product['sku'] }}] {{ product['name'] }}</li>
     {% endfor %}
     </ul>
+    {% else %}
+    <p class="body">(This order doesn't have any product.)</p>
+    {% endif %}
   </article>
   {% if not loop.last %}
   <hr />
